[package]
name = "gmux"
version = "0.1.4"
authors = ["Aphosis <aphosis.github@gmail.com>"]
edition = "2018"
description = "Manage multiple git repositories with ease."
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Aphosis/gmux"
repository = "https://github.com/Aphosis/gmux"
keywords = ["git", "dev"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    ".vscode/*",
]

[package.metadata.arch]
arch = ["x86_64"]
makedepends = ["cargo"]
provides = ["gmux"]

[dependencies]
colored = "2.0.0"
config = "0.11.0"
crc32fast = "1.3.0"
dirs = "4.0.0"
git2 = "0.13.25"
glob = "0.3.0"
lazy_static = "1.4.0"
log = "0.4.14"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
serde = { version = "1.0.133", features = ["derive"] }
serde_yaml = "0.8.23"
clap = { version = "3", features = ["derive"] }
toml = "0.5.8"
walkdir = "2.3.2"
rayon = "1.5"

[build-dependencies]
clap = "3"
clap_complete = "3"
